--- a/scripts/flaskask.service
+++ b/scripts/flaskask.service
@@ -7,7 +7,7 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/flaskask
 Environment="PATH=/home/ubuntu/flaskask/venv/bin"
-ExecStart=/home/ubuntu/flaskask/venv/bin"/gunicorn --workers 3 --bind unix:flaskask.sock -m 007 wsgi:app
+ExecStart=/home/ubuntu/flaskask/venv/bin/gunicorn --workers 3 --bind unix:flaskask.sock -m 007 wsgi:app
 
 [Install]
 WantedBy=multi-user.target
