--- a/scripts/flaskask.service
+++ b/scripts/flaskask.service
@@ -8,6 +8,7 @@ Group=www-data
 WorkingDirectory=/home/ubuntu/flaskask
 Environment="PATH=/home/ubuntu/flaskask/venv/bin"
 ExecStart=/home/ubuntu/flaskask/venv/bin/gunicorn --workers 3 --preload --bind unix:flaskask.sock -m 007 wsgi:app
+EnvironmentFile=/home/ubuntu/flaskask/environment
 
 [Install]
 WantedBy=multi-user.target
